--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mobx": "^6.1.8",
     "mobx-react-lite": "^3.2.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.5.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
     "react-dropzone": "^11.3.2",
