--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.1.1",
     "react-icons": "^4.2.0",
+    "react-responsive": "^8.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-toastify": "^7.0.4",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/react-burger-menu": "^2.8.0",
+    "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9"
   }
