Image Gallery Updated

--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@types/react-burger-menu": "^2.8.0",
     "@types/react-responsive": "^8.0.2",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-toastify": "^4.1.0",
     "@types/styled-components": "^5.1.9"
   }
 }
