--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^1.5.2",
     "react-burger-menu": "^3.0.6",
     "react-dom": "^17.0.2",
+    "date-fns": "^2.22.1",
     "react-dropzone": "^11.3.2",
     "react-hook-form": "^7.1.1",
     "react-icons": "^4.2.0",
